--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "expo": "~47.0.8",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.1.0",
+    "react-native": "0.70.5",
+    "react-native-image-picker": "^5.0.0",
+    "react-native-paper": "^5.0.2",
+    "react-native-web": "^0.18.10",
+    "expo-permissions": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
